--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "file-loader": "^6.1.0",
     "friendly-errors-webpack-plugin": "^1.7.0",
     "gh-pages": "^3.1.0",
+    "handlebars": "^4.7.6",
     "handlebars-loader": "^1.7.1",
     "html-loader": "^1.3.1",
     "html-webpack-plugin": "^4.5.0",
@@ -49,7 +50,6 @@
     "webpackbar": "^4.0.0"
   },
   "dependencies": {
-    "core-js": "^3.6.5",
-    "handlebars": "^4.7.6"
+    "core-js": "^3.6.5"
   }
 }
